@@ -57,6 +57,7 @@ Features
 Bugfixes
 --------
 
+* Pass arguments to youtube directive unchanged (Issue #3150)
 * Fix listing installed themes if theme directory is missing.
 * Watch correct output folder in ``nikola auto`` (Issue #3119)
 * Fix post fragment dependencies when posts are only available in a
